[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/components/QuestionCard.gd" type="Script" id=2]

[sub_resource type="ButtonGroup" id=1]
resource_local_to_scene = false

[sub_resource type="ButtonGroup" id=2]
resource_local_to_scene = false

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]
resource_local_to_scene = false

[node name="QuestionCard" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -168.0
margin_right = 186.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionText" type="Label" parent="."]
margin_right = 375.0
margin_bottom = 14.0
text = "Pitanje"
align = 1

[node name="Answers" type="GridContainer" parent="."]
margin_top = 18.0
margin_right = 375.0
margin_bottom = 126.0

[node name="optionA" type="CheckBox" parent="Answers"]
margin_right = 24.0
margin_bottom = 24.0
action_mode = 0
group = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionB" type="CheckBox" parent="Answers"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0
action_mode = 0
group = SubResource( 2 )

[node name="optionC" type="CheckBox" parent="Answers"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0
action_mode = 0
group = SubResource( 3 )

[node name="optionD" type="CheckBox" parent="Answers"]
margin_top = 84.0
margin_right = 24.0
margin_bottom = 108.0
action_mode = 0
group = SubResource( 4 )

[node name="Button" type="Button" parent="."]
margin_top = 130.0
margin_right = 375.0
margin_bottom = 150.0
text = "Potvrdi odgovor"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
